# iecs

./: .gitignore  .goreleaser.yaml  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  README.md  default.nix  devenv.nix  devenv.yaml  flake.nix  go.mod  go.sum  gomod2nix.toml  main.go  secretspec.toml
.github/: release.yml
.github/workflows/: build.yml  main.yml  prerelease.yml  release.yml
client/: aws.go  client.go  client_test.go  demo.go  mock.go
client/ecs/: ecs.go
client/logs/: logs.go
cmd/: deploy.go  exec.go  exec_test.go  lazy.go  logs.go  logs_test.go  mocks_test.go  root.go  root_cmd_test.go  root_test.go  ssh.go  tail.go  update.go
cmd/exec/: mocks_test.go  root.go  root_test.go  selector.go
cmd/logs/: mocks_test.go  root.go  root_test.go
cmd/update/: root.go
internal/selector/: cluster.go  container.go  task.go
internal/ui/: cluster.go  container.go  logs.go  pages.go  service.go  task.go  workspace.go
rust/iecs/: Cargo.toml
rust/iecs/src/: main.rs
rust/lazy_ecs/: Cargo.toml
rust/lazy_ecs/src/: main.rs
selector/: cluster.go  cluster_test.go  container.go  containerdefinition.go  huh.go  root.go  root_test.go  selector.go  service.go  task.go  types.go
src/: main.rs
templates/: .gitignore
templates/default/: flake.nix
templates/devenv/: devenv.nix  devenv.yaml
templates/flake/: flake.nix
templates/flake-overlay/: flake.nix
templates/overlay/: flake.nix
