[package]
name = "lazy_ecs"
version = "0.1.0"
edition = "2021"

rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
aws-config = "1.5.6"
aws-sdk-ecs = "1.45.0"
clap = { version = "4.5.17", features = ["derive"] }
inquire = "0.7.5"
tokio = { version = "1.40.0", features = ["full"] }
